# Coursework_and_Academic_Resources-

./: README.md
AF1001-Fundamentals-of-Accounting-master/: README.md
CL1002-PFLab.-main/Assignment 01/: Problem _01.c  Problem _03.c  Problem _05.c  Problem _06.c
CL1002-PFLab.-main/CL1002 – Programming Fundamentals Lab Exercise # 12/: 2.c  2.out  3and4.out  5.c  5.out  6.c  6.out  sortedNumbers.txt
CL1002-PFLab.-main/PF Lab EX-9 25 November 2022/: 1.out  3.c  3.out  4.c  4.out
CL1002-Programming-Fundamentals-Lab-master/Final exam/: 1.out  2.out  3.out  4.out  Q1  Q1.c  Q2.c  Q3.c  Q4.c  t  t.c
CL1004-Object-Oriented-Programming---Lab-master/: OOP Course Outlines.docx
CL1004-Object-Oriented-Programming---Lab-master/Lab Task 01/: 1.out  2.out  3.out  4.out  Muhammad_Rehan_22P-9106_task1.cpp  Muhammad_Rehan_22P-9106_task2.cpp  Muhammad_Rehan_22P-9106_task3.cpp  Muhammad_Rehan_22P-9106_task4.cpp
CL1004-Object-Oriented-Programming---Lab-master/Lab Task 02/: Muhammad_Rehan_22P-9106_task1.cpp  Muhammad_Rehan_22P-9106_task2.cpp  Muhammad_Rehan_22P-9106_task3.cpp
CL2001-Data-Structures---Lab-master/: README.md
CS1004-Object-Oriented-Programming-master/: OOP HomeTask 1.cpp  OOP hometask 2.docx  OOP hometask.docx  Reading Assignments.txt  Template_for_question_paper Sesssional Exam.docx  project prosopel.docx
CS2001-Data-Structures-master/: Fibonacci-Iterative-Recursive.cpp
CS2007-Human-Computer-Interaction-main/: README.md  abstract outline.docx
CS4041-Computer-Modeling-and-Simulation/: Plan_Execution_CS4041_S24_Students.xlsx
(+444 files in other folders)
